[package]
name = "learn_password"
version = "0.3.4"
edition = "2021"
authors = ["Philippe Llerena<philippe.llerena@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "7.2.0"
sha2 = "0.10.7"
confy = "0.5.1"
serde = "1.0.179"
serde_derive = "1.0.175"
clap = { version = "4.3.19", features = ["derive"] }
