[package]
name = "learn_password"
version = "0.3.5"
edition = "2021"
authors = ["Philippe Llerena<philippe.llerena@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "7.3.1"
confy = "0.6.0"
serde = "1.0.195"
serde_derive = "1.0.195"
clap = { version = "4.4.18", features = ["derive"] }
argon2 = { version = "0.5.2", features = ["default"] }
rand_core = { version = "0.6.4", features = ["std"] }
